--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -1,20 +1,19 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 
 # testing
-coverage
+/coverage
 
 # next.js
-.next/
-out/
+/.next/
+/out/
 
 # production
-build
-dist
+/build
 
 # misc
 .DS_Store
@@ -31,10 +30,6 @@ yarn-error.log*
 
 # vercel
 .vercel
-
-# strapi (archivos temporales del backend)
-.strapi/
-.tmp/
 
 # typescript
 *.tsbuildinfo
